--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,12 +1,15 @@
 {
   "dependencies": {
     "com.dgreenheck.openfracture": "https://github.com/dgreenheck/OpenFracture.git",
+    "com.unity.cinemachine": "2.8.9",
     "com.unity.collab-proxy": "2.0.4",
+    "com.unity.ext.nunit": "1.0.6",
     "com.unity.feature.development": "1.0.1",
     "com.unity.ide.rider": "3.0.21",
     "com.unity.ide.visualstudio": "2.0.18",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.postprocessing": "3.2.2",
+    "com.unity.render-pipelines.universal": "12.1.11",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.6.5",
